# elsa-tabletop

./: .gitignore  .gitmodules  .rosinstall  .rosinstall.bak  README.md  changeLog.md  dependencies.rosinstall  requirements.txt
elsa_benchmark/: CMakeLists.txt  README.md  package.xml
elsa_benchmark/msg/: BenchmarkErrorDimension.msg  BenchmarkErrorMetrics.msg  BenchmarkSummary.msg  MaxError.msg
elsa_benchmark/scripts/: benchmark_perception_server.py  clear_scene_server.py  spawn_specific_scene_server.py
elsa_benchmark/srv/: SpawnScene.srv
elsa_object_database/: CMakeLists.txt  ObjectDatabase.csv  README.md  package.xml  readme_ObjectDatabase.md
elsa_object_database/msg/: ObjectRegistration.msg
elsa_object_database/scripts/: registered_objects_service_server.py
elsa_object_database/srv/: RegisteredObjects.srv
elsa_panda_controls/: CMakeLists.txt  README.md  package.xml
elsa_panda_controls/launch/: observe_realsense_cam.launch  sim_move_group.launch
elsa_panda_controls/scripts/: benchmark_perception.py  demo_moveit.py  node_gazebo_joint_client.py  node_gazebo_joint_command_publisher.py  node_gazebo_joint_configuration_server.py  node_gazebo_model_states_read.py  node_gazebo_move_cartesian.py  node_gazebo_move_to_zero_config.py  node_gazebo_pass_gesture.py  node_gazebo_point_gesture.py  node_gazebo_read_cartesian_pose.py  node_gazebo_test_joint_movement.py  node_ik_client_demo.py  node_moveit_inverse_kinematics.py  spawn_specific_scene.py  test_potatofarmer.py
elsa_panda_controls/srv/: GoalPoseJointSpace.srv
elsa_perception/: CMakeLists.txt  README.md  package.xml  setup.py
elsa_perception/launch/: realsense_cam.launch
elsa_perception/scripts/: benchmark_perception.py  node_gazebo_read_camera.py  node_gazebo_rviz_markers.py  node_read_camera.py  node_test_cube_dimensions.py  plot_point_cloud.py  test_bounding_boxes.py  test_point_cloud.py  test_surface_normals.py
elsa_perception/scripts/perception/: bounding_box.py  evaluate_benchmark.py  plane_removal.py  plot_utils.py  pointcloud_bb.py  pointcloud_objects.py  pointcloud_scene.py  randomize_sdf.py  real_world_preprocessing.py  sdf_modifier.py
elsa_perception/scripts/perception/legacy_code/: pointcloud_bb.py  pointcloud_objects_python_only.py
elsa_perception/src/: surface_features_service.cpp
elsa_perception_msgs/: CMakeLists.txt  package.xml
elsa_perception_msgs/msg/: ClusteredPointcloud.msg  FullSceneStamped.msg  PhysicalFeatures.msg  PhysicalScene.msg  PhysicalSceneStamped.msg  SocialFeatures.msg  SurfaceFeaturesMsg.msg
elsa_perception_msgs/srv/: Benchmark.srv  SurfaceFeatures.srv
elsa_simulator/: CMakeLists.txt  README.md  package.xml
elsa_simulator/launch/: benchmark.launch  gazebo_color_clustering_test.launch  gazebo_perception.launch  perception.launch  self_occlusion.launch  self_occlusion_config.yaml  sim.launch  sim_with_kinematics.launch  sim_with_kinematics_one_object.launch
elsa_simulator/models/big_table/: model-1_3.sdf  model.sdf
elsa_simulator/models/brick/: model.sdf
elsa_simulator/models/coke_can/: model.sdf
elsa_simulator/models/coke_can_red/: model.sdf
elsa_simulator/models/cube_5cm/: model.config  model.sdf
elsa_simulator/models/cube_7_5cm/: model.config  model.sdf
elsa_simulator/models/cube_7_5cm_red/: model.sdf
elsa_simulator/models/cube_large_blue/: model.sdf
elsa_simulator/models/cube_large_green/: model.sdf
elsa_simulator/models/pink_can/: model.sdf
elsa_simulator/models/rectangle/: model.sdf
elsa_simulator/models/rectangle_yellow/: model.sdf
elsa_simulator/models/tin_can/: model.sdf
elsa_simulator/robots/: _d435.gazebo.xacro  _d435.urdf.xacro  panda_and_camera_model.urdf.xacro
elsa_simulator/startup_scripts/: force_neutral_pose.py
elsa_simulator/worlds/: benchmark.world  color_cluster_test.world  empty_table.world  panda.world  panda_one_object.world
elsa_training_data_generation/: CMakeLists.txt  README.md  package.xml
elsa_training_data_generation/launch/: data_generator.launch
elsa_training_data_generation/models/: materials.xacro
elsa_training_data_generation/scripts/: spawn_objects.py  store_feature_vector.py
franka_panda_description/robots/: _d435.urdf.xacro  hand.xacro  panda.gazebo.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
iis_panda_controls/: CMakeLists.txt  package.xml
iis_panda_controls/msg/: BB_Scene.msg  Feature.msg  StrArray.msg
iis_panda_controls/scripts/: benchmark_perception.py  deg_rad.py  joint_command_publisher.py  node_gazebo_grabby_motion.py  node_gazebo_joint_client.py  node_gazebo_joint_command_publisher.py  node_gazebo_joint_configuration_server.py  node_gazebo_move_cartesian.py  node_gazebo_move_to_neutral.py  node_gazebo_pass_gesture.py  node_gazebo_point_gesture.py  node_gazebo_read_camera.py  node_gazebo_single_joint_control.py  node_read_camera.py  plot_convex_hull.py  plot_point_cloud.py  pointcloud_bb.py  potatofarmer.py  read_camera.py  read_cartesian_pose.py  spawn_specific_scene.py  test_bounding_boxes.py  test_oobb.py  test_point_cloud.py  test_potatofarmer.py  test_surface_normals.py  xyz.npy
iis_panda_controls/scripts/mz_cv/: arrow.py  bounding_box.py  plane_removal.py  pointcloud_objects.py
iis_panda_controls/scripts/old/: episodic_force_pusher.py  kmeans_sillhuette_clustering.py  vanilla_clustering.py
iis_panda_controls/scripts/perception/: pointcloud_objects.py  pointcloud_objects_python_only.py  rejection_sampling.py
iis_panda_controls/src/: save_point_cloud.cpp  sub_pc.cpp  surface_features_service.cpp
iis_panda_controls/srv/: JointConfig.srv
iis_perception_msgs/: CMakeLists.txt  package.xml
iis_perception_msgs/msg/: BoundingBox.msg  FeatureVector.msg
panda_gazebo/config/: robot_details.yaml
panda_gazebo/launch/: benchmark.launch  empty.launch  panda_world.launch
panda_gazebo/models/big_table/: model-1_2.sdf  model-1_4.sdf  model.config
panda_gazebo/worlds/: empty_panda.world  panda.world
panda_gazebo/worlds copy/: panda.world
panda_simulator_examples/scripts/: move_robot.py  task_space_control_using_sim_only.py  task_space_control_with_fri.py
(+33 files in other folders)
