<?xml version="1.0"?>
<package>
  <name>elsa_panda_controls</name>
  <version>0.0.0</version>
  <description>The elsa_panda_controls package</description>
  <maintainer email="m-zaric@hotmail.com">Marko Zaric</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>franka_core_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>franka_moveit</build_depend>
  <build_depend>panda_sim_moveit</build_depend>
  <build_depend>panda_gazebo</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>elsa_perception</build_depend>
  <build_depend>elsa_perception_msgs</build_depend>
  <build_depend>panda_moveit_config</build_depend>
  
  
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>franka_core_msgs</run_depend>
  <run_depend>elsa_perception</run_depend>
  <run_depend>elsa_perception_msgs</run_depend>
  <run_depend>panda_gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>franka_moveit</run_depend>
  <run_depend>panda_sim_moveit</run_depend>
  <run_depend>panda_gazebo</run_depend>
  <run_depend>panda_moveit_config</run_depend>

</package>
